Add and config Apache Http Client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+musca.barista.apihost=http://localhost:8080
 
+logging.level.org.apache.http=debug
+
+musca.maxtotal=100
+musca.defaultmaxperroute=20
+musca.connectionrequesttimeout=3000
+musca.sockettimeout=3000
